# Hydra

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  CONSTITUTION.md  CONTRIBUTING-SQUADS.md  Enterprise Master AI Orchestration System Architecture.md  HYDRA — A Manifesto for a Many-Headed, One-Souled Intelligence.md  HYDRA.md  PROJECT_MASTER.md  README.md  SQUAD-AUTOGENESIS-PLAN.md  hooks.json  mesh-manifest.yaml  plugin.json  pyproject.toml
.claude-plugin/: hooks.json  marketplace.json  plugin.json
docs/: BRAND.md  LAUNCH-CHECKLIST.md  MANIFESTO.md  MCP-PER-CROWN.md  MCP_SETUP.md  PORTABILITY.md  PRICING.md  PUBLIC-README.md  ROADMAP-MANIFESTO.md  TRADEMARK-CLEARANCE.md  VENOM.md
hydra_core/: __init__.py  cli.py  deliberation.py  dispatcher.py  fleet.py  gateway_templates.json  governance.py  heads.py  immortal_head.py  iolaus.py  memory.py  node_context.py  procedural.py  reflection.py  repo_registry.py  router.py  schemas.py  squad_loader.py  squad_node.py  state.py  supervisor.py  telemetry.py  tiers.py  tool_analytics.py  tool_recommender.py  tool_scope.py  toolshed.py  venom.py  version.py
mcp_servers/: _pack_shim.py
scripts/: backends.template.json  hydra.ps1  install.ps1  setup.ps1  setup.sh
templates/: squad.yaml.tpl
tests/: test_capability.py  test_cli.py  test_deliberation.py  test_eights.py  test_eights_attestation.py  test_eights_replay_queue.py  test_fleet.py  test_fleet_budget.py  test_fleet_campaign.py  test_fleet_slice2.py  test_governance_envelope_ceiling.py  test_heads.py  test_iolaus.py  (+24 more)
(+185 files in other folders)
